feat: add common type checking and conversion methods.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "types": ["vitest/globals"],
     "target": "ES2020",
     "useDefineForClassFields": true,
     "module": "ESNext",
@@ -24,7 +25,7 @@
     "sourceMap": false,
     "esModuleInterop": true,
     "noImplicitReturns": true,
-    "noImplicitThis": false,
+    "noImplicitThis": false
   },
-  "include": ["src"]
+  "include": ["src", "test"]
 }
