feat: refactor utility library, optimize type checking and object manipulation functions

--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,12 @@ dist
 dist-ssr
 *.local
 
+docs/.vitepress/dist
+docs/.vitepress/cache
+
 # Editor directories and files
 # .vscode/*
-# !.vscode/extensions.json
+!.vscode/extensions.json
 .idea
 .DS_Store
 *.suo
