--- a/package.json
+++ b/package.json
@@ -1,19 +1,48 @@
 {
-  "name": "unfunt",
-  "type": "module",
+  "name": "ts-library-starter",
   "version": "0.0.1",
-  "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "test": "vitest"
+    "build": "node scripts/build.js",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "lint": "eslint . --fix",
+    "lint:check": "eslint .",
+    "prepare": "simple-git-hooks",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.24.1",
-    "eslint": "^9.8.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.3.4",
-    "vitest": "^2.0.5"
+    "@eslint/js": "^9.31.0",
+    "@rollup/plugin-typescript": "12.1.4",
+    "@stylistic/eslint-plugin": "^5.2.0",
+    "@types/fs-extra": "^11.0.4",
+    "@types/minimist": "1.2.5",
+    "@types/node": "24.0.15",
+    "@typescript-eslint/eslint-plugin": "8.37.0",
+    "@typescript-eslint/parser": "8.37.0",
+    "eslint": "9.31.0",
+    "execa": "9.6.0",
+    "fs-extra": "11.3.0",
+    "lint-staged": "^16.1.2",
+    "minimist": "1.2.8",
+    "picocolors": "^1.1.1",
+    "rollup": "4.45.1",
+    "rollup-plugin-esbuild": "6.2.1",
+    "rollup-plugin-typescript2": "0.36.0",
+    "simple-git-hooks": "^2.13.0",
+    "tslib": "2.8.1",
+    "typescript": "5.8.3",
+    "vitepress": "1.6.3",
+    "vitest": "^3.2.4"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,ts}": [
+      "eslint --fix"
+    ]
   }
 }
