feat: prepare for npm publishing
- Add MIT LICENSE file
- Update package configuration for unfunt library
- Fix types field from index.d.js to index.d.ts
- Update package name, description and repository info
- Add npm publish scripts with version management
- Configure build script to copy LICENSE to dist

--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "prepare": "simple-git-hooks",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:preview": "vitepress preview docs",
+    "version": "pnpm build && git add dist",
+    "prepublishOnly": "pnpm test:run && pnpm lint:check",
+    "publish:patch": "npm version patch && cd dist && npm publish",
+    "publish:minor": "npm version minor && cd dist && npm publish",
+    "publish:major": "npm version major && cd dist && npm publish",
+    "publish:dry": "cd dist && npm pack --dry-run"
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
