--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unfunt-creator",
-  "version": "0.0.1",
+  "version": "0.1.0-alpha.1",
   "type": "module",
   "scripts": {
     "build": "node scripts/build.js",
@@ -17,7 +17,9 @@
     "publish:patch": "npm version patch && cd dist && npm publish",
     "publish:minor": "npm version minor && cd dist && npm publish",
     "publish:major": "npm version major && cd dist && npm publish",
-    "publish:dry": "cd dist && npm pack --dry-run"
+    "publish:dry": "cd dist && npm pack --dry-run",
+    "release": "node scripts/release.js",
+    "release:dry": "node scripts/release.js --dry"
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
@@ -26,8 +28,10 @@
     "@types/fs-extra": "^11.0.4",
     "@types/minimist": "1.2.5",
     "@types/node": "24.0.15",
+    "@types/semver": "^7.7.0",
     "@typescript-eslint/eslint-plugin": "8.37.0",
     "@typescript-eslint/parser": "8.37.0",
+    "enquirer": "^2.4.1",
     "eslint": "9.31.0",
     "execa": "9.6.0",
     "fs-extra": "11.3.0",
@@ -37,6 +41,7 @@
     "rollup": "4.45.1",
     "rollup-plugin-esbuild": "6.2.1",
     "rollup-plugin-typescript2": "0.36.0",
+    "semver": "^7.7.2",
     "simple-git-hooks": "^2.13.0",
     "tslib": "2.8.1",
     "typescript": "5.8.3",
