--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "unfunt-creator",
   "version": "0.1.0-alpha.1",
+  "packageManager": "pnpm@10.13.1",
   "type": "module",
   "scripts": {
     "build": "node scripts/build.js",
