--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
-    "@rollup/plugin-typescript": "12.1.4",
     "@stylistic/eslint-plugin": "^5.2.0",
     "@types/fs-extra": "^11.0.4",
     "@types/minimist": "1.2.5",
@@ -42,11 +41,9 @@
     "lint-staged": "^16.1.2",
     "minimist": "1.2.8",
     "picocolors": "^1.1.1",
-    "rollup": "4.45.1",
-    "rollup-plugin-esbuild": "6.2.1",
-    "rollup-plugin-typescript2": "0.36.0",
     "semver": "^7.7.2",
     "simple-git-hooks": "^2.13.0",
+    "tsdown": "^0.15.12",
     "tslib": "2.8.1",
     "typescript": "5.8.3",
     "vitepress": "1.6.3",
