--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "node scripts/build.js",
-    "build:packages": "node scripts/build-packages.js",
+    "build:packages": "node scripts/build-package.js",
     "test": "vitest",
     "test:run": "vitest run",
     "lint": "eslint . --fix",
