--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"],
+  "exclude": ["scripts", "npm-packages"]
 }
