--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unfunt-creator",
-  "version": "0.3.0-alpha.4",
+  "version": "0.5.0-beta.1",
   "packageManager": "pnpm@10.13.1",
   "type": "module",
   "scripts": {
