--- a/.github/workflows/size-data.yml
+++ b/.github/workflows/size-data.yml
@@ -15,7 +15,7 @@ permissions:
 
 jobs:
   upload:
-    if: github.repository == 'uphg/unfunt'
+    if: github.repository == 'uphg/xfunc'
     runs-on: ubuntu-latest
 
     steps:
