--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "unfunt-creator",
+  "name": "xfunc-creator",
   "version": "0.5.0-beta.1",
   "packageManager": "pnpm@10.13.1",
   "type": "module",
